k8s/milli-prod/apps/webhooks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mino-webhooks
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mino-webhooks
