k8s/milli-prod/apps/webhooks/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mino-webhooks
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - secretName: mino-api-tls
      hosts:
        - "mino-api.us-east-1.prod.milli-bank.com"
  rules:
    - host: mino-api.us-east-1.prod.milli-bank.com
      http:
        paths:
          - path: /webhooks/v1/marqeta
            backend:
              serviceName: mino-webhooks
              servicePort: https
          - path: /webhooks/v1/fnbo
            backend:
              serviceName: mino-webhooks
              servicePort: https
